# app/Http/Controllers/ProductController.php
@@ -39,11 +39,11 @@ class ProductController extends Controller
      *   summary="Get all Products",
      *   tags={"products"},
      *   @OA\Parameter(
-     *     description="Store Id",
+     *     description="Store Id (or slug)",
      *     in="path",
      *     name="store_id",
      *     required=true,
-     *     @OA\Schema(type="integer")
+     *     @OA\Schema(type="string")
      *   ),
      *   @OA\Parameter(
      *     description="Page",
@@ -61,17 +61,41 @@ class ProductController extends Controller
      *       type="integer",
      *     ),
      *   ),
+     *   @OA\Parameter(
+     *     description="Category Id",
+     *     in="query",
+     *     name="category_id",
+     *     @OA\Schema(type="integer")
+     *   ),
      *   @OA\Response(
      *     response=200,
      *     description="",
      *   ),
      * )
      */
-    public function index(Request $request)
+    public function index(Request $request, $store_id)
     {
-        $per_page = $request->input('per_page');
+        if (!is_numeric($store_id)) {
+            $store = Store::where('slug', $store_id)->first();
+            $store_id = $store->id;
+        }
 
-        $query = Product::orderBy('created_at', 'desc');
+        $include = $request->input('include');
+        $query = Product::with(!$include ? [] : $include)
+            ->orderBy('created_at', 'desc')
+            ->where('store_id', $store_id);
+
+        $category_id = $request->input('category_id');
+        if ($category_id) {
+            // 当前分类及包含下一层级分类添加到查询条件中
+            $query->whereIn('category_id', function($subquery) use ($category_id){
+                $subquery->select('id')->from('categories');
+                $subquery->where('id', $category_id);
+                $subquery->orWhere('parent_id', $category_id);
+            });
+        }
+
+        $per_page = $request->input('per_page');
         return jsonPagination(200, $query->paginate($per_page));
     }
 
@@ -100,10 +124,16 @@ class ProductController extends Controller
      *   ),
      * )
      */
-    public function show(Request $request, $product_id)
+    public function show(Request $request, $store_id, $product_id)
     {
+        if (!is_numeric($store_id)) {
+            $store = Store::where('slug', $store_id)->first();
+            $store_id = $store->id;
+        }
+
         $include = $request->input('include');
         $data = Product::with(!$include ? [] : $include)
+            ->where('store_id', $store_id)
             ->orWhere(function ($query) use ($product_id) {
                 $query->where('id', $product_id);
                 $query->orWhere('slug', $product_id);
